Fixing the add-game logic to include publisher and platforms